# NSP2-ultrasound

./: README.md  pyproject.toml
TXTDATA_MeesHoogenberg_15220494/data_aluminium/: 100.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  160.000000.txt  60.000000.txt  70.000000.txt  90.000000.txt
TXTDATA_MeesHoogenberg_15220494/data_water/: 100.000000.txt  160.000000.txt  170.000000.txt  70.000000.txt  90.000000.txt
data/data_aluminium/: 110.000000.txt  170.000000.txt  80.000000.txt
data/data_water/: 110.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  60.000000.txt  80.000000.txt
data_aluminium_height/data_aluminium_0/: 100.000000.txt  110.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  40.000000.txt  50.000000.txt  60.000000.txt  70.000000.txt  80.000000.txt  90.000000.txt
data_aluminium_height/data_aluminium_1/: 100.000000.txt  110.000000.txt  120.000000.txt  (+9 more)
data_antikal_spray/: 100.000000.txt  110.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  160.000000.txt  170.000000.txt  60.000000.txt  70.000000.txt  80.000000.txt  90.000000.txt
data_copper/: 100.000000.txt  110.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  160.000000.txt  170.000000.txt  60.000000.txt  70.000000.txt  80.000000.txt  90.000000.txt
test_data/: 100.000000.txt  110.000000.txt  120.000000.txt  130.000000.txt  140.000000.txt  150.000000.txt  160.000000.txt  170.000000.txt  180.000000.txt  60.000000.txt  70.000000.txt  80.000000.txt  90.000000.txt
(+21 files in other folders)
